# matlib

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  matrix.h  matrix_op.h  test.cc  vector.h
